--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
       <span class="task-span">Task</span>
 
       <div id="taskListJS">
+        
         <div class="task-item">
           <div class="task">
             <label>
               <input type="checkbox" />
               <span class="checkmark"></span>
             </label>
-            <span class="text">Read a book</span>
+            <span class="text"></span>
           </div>
           <div class="edit-delete-btn">
             <button class="edit"><i class="fa fa-pen"></i></button>
             <button class="delete"><i class="fa fa-trash"></i></button>
           </div>
         </div>
+
       </div>
     </div>
   </main>
